Fix spacing and text-align in flex 4

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -16,12 +16,20 @@ img {
 .column{
   display: flex;
   flex-direction: column;
+  align-items: center;
+  margin: 32px 52px;
 }
 
 .plants{
   display: flex;
   justify-content: center;
 }
+
+.text {
+  width: 200px;
+  text-align: center;
+}
+
 
 /* do not edit this footer */
 .footer {
